--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 license = { text = "MIT" }
 requires-python = ">=3.13"
 authors = [
-    { name = "Hapfel" }
+    { name = "Quirin" }
 ]
 keywords = ["elden-ring", "save-editor", "save-manager", "game-tools"]
 classifiers = [
@@ -22,9 +22,6 @@ classifiers = [
 [project.scripts]
 er-save-manager = "er_save_manager.cli:main"
 
-[project.gui-scripts]
-er-save-manager-gui = "er_save_manager.ui.gui_main:main"
-
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
@@ -32,7 +29,6 @@ build-backend = "hatchling.build"
 [tool.hatch.build.targets.wheel]
 packages = ["src/er_save_manager"]
 
-# Use dependency-groups instead of deprecated tool.uv.dev-dependencies
 [dependency-groups]
 dev = [
     "pyinstaller>=6.0",
@@ -65,5 +61,4 @@ known-first-party = ["er_save_manager"]
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 pythonpath = ["src"]
-# Don't fail if no tests collected yet
 minversion = "8.0"
