feat(ui): implement complete community character preset browser system
Add full preset browser with GitHub-hosted database for sharing character appearances:

- Full browser dialog with grid view, search, filter, and sort
- Preset manager for downloading and caching presets from GitHub
- Automatic fallback to "Coming Soon" when database is empty
- Integration with appearance tab via "Browse Community Presets" button
- Support for viewing preset screenshots and metadata
- One-click apply with automatic backup creation
- Real-time search by name/author with tag filtering
- Sort options: Recent, Popular, Name A-Z
- Local caching with 1-hour TTL to reduce GitHub API calls

Backend:
- PresetManager class handles fetching index.json from GitHub
- Downloads preset data and screenshots to ~/.er_save_manager/presets/
- Integrates with CharacterPresets for applying appearance data
- Error handling with graceful fallback to Coming Soon dialog

UI Components:
- PresetBrowserDialog: Main browser with split view
- Grid view (3 columns) with clickable preset cards
- Preview pane with large screenshot and full details
- Search/filter/sort controls at top
- Refresh button to fetch latest presets

External Database:
- GitHub repo: Hapfel1/er-character-presets
- Presets stored as JSON with appearance data
- Screenshots hosted alongside preset files
- Index.json for fast browsing without downloading all presets
- No tool updates needed when adding new presets

This enables community-driven character sharing with manual curation
and zero-downtime updates to the preset database.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ classifiers = [
     "Programming Language :: Python :: 3.13",
     "Topic :: Games/Entertainment",
 ]
+dependencies = [
+    "pillow>=12.1.0",
+]
 
 [project.scripts]
 er-save-manager = "er_save_manager.cli:main"
